[tool.poetry]
name = "llama3-function-calling"
version = "0.1.0"
description = ""
authors = ["Teck Meng <furyx@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
groq = "^0.5.0"
langchain-community = "^0.0.38"
langchain-groq = "^0.1.3"
yfinance = "^0.2.38"
plotly = "^5.22.0"
langchain-core = "^0.1.52"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
